# LittleTableTennis

./: .gitmodules  LICENSE  LittleTableTennis.sln  LittleTableTennis.vcxproj  README.md  meson.build
data/models/: board1.blend  counter.blend  counter.glb
src/: basic_pipeline.cc  basic_pipeline.hh  board.cc  board.hh  game.cc  game.hh  main.cc  pipeline.cc  pipeline.hh
